# untitled_search

./: .dockerignore  Cargo.toml  Dockerfile
k8/: deploy.yaml  postgres_deploy.yaml  postgres_service.yaml  service.yaml  volume.yaml  volume_claim.yaml
search_database/k8/: job.yaml
search_database/migrations/2024-06-01-021227_create_search/: down.sql  up.sql
search_database/migrations/2024-06-06-011159_users_search/: down.sql  up.sql
search_database/migrations/2024-06-07-021406_projects_search/: down.sql  up.sql
search_database/tf/: ecr.tf
src/: main.rs  routes.rs
src/axum/extractors/: mod.rs  project_search_repository.rs  user_search_repository.rs
src/host/: configuration.rs  mod.rs  routes.rs
src/host/axum/extractors/: search_repository.rs
src/host/repository/: mod.rs  postgres.rs
src/host/repository/search/: mod.rs  postgres.rs
src/host/web/: mod.rs  query.rs  register.rs
src/repository/: mod.rs  postgres.rs
src/repository/projects/: mod.rs  postgres.rs
src/repository/users/: mod.rs  postgres.rs
src/web/: create_project.rs  create_user.rs  delete_project_value.rs  mod.rs  query.rs
tf/: ecr.tf
